--- a/locale/fr_FR.po
+++ b/locale/fr_FR.po
@@ -2,10 +2,18 @@
 msgid ""
 msgstr "Content-Type: text/plain; charset=utf-8\n"
 
-msgctxt "error:calendar.event:0"
+msgctxt "error:calendar.event:"
 msgid "Busy"
 msgstr "Occupé"
 
-msgctxt "error:calendar.event:0"
+msgctxt "error:calendar.event:"
+msgid "Busy"
+msgstr "Occupé"
+
+msgctxt "error:calendar.event:"
+msgid "Free"
+msgstr "Libre"
+
+msgctxt "error:calendar.event:"
 msgid "Free"
 msgstr "Libre"
