Update french translation

--- a/locale/fr_FR.po
+++ b/locale/fr_FR.po
@@ -17,3 +17,7 @@ msgstr "Libre"
 msgctxt "error:calendar.event:"
 msgid "Free"
 msgstr "Libre"
+
+msgctxt "model:calendar.event,name:"
+msgid ""
+msgstr ""
