--- a/locale/es_ES.po
+++ b/locale/es_ES.po
@@ -2,10 +2,10 @@
 msgid ""
 msgstr "Content-Type: text/plain; charset=utf-8\n"
 
-msgctxt "error:calendar.event:0"
+msgctxt "error:calendar.event:"
 msgid "Busy"
 msgstr "Ocupado"
 
-msgctxt "error:calendar.event:0"
+msgctxt "error:calendar.event:"
 msgid "Free"
 msgstr "Libre"
