--- a/locale/ca_ES.po
+++ b/locale/ca_ES.po
@@ -1,11 +1,11 @@
-#
+# 
 msgid ""
 msgstr "Content-Type: text/plain; charset=utf-8\n"
 
-msgctxt "error:calendar.event:0"
+msgctxt "error:calendar.event:"
 msgid "Busy"
 msgstr "Ocupat"
 
-msgctxt "error:calendar.event:0"
+msgctxt "error:calendar.event:"
 msgid "Free"
 msgstr "Lliure"
