--- a/locale/es_CO.po
+++ b/locale/es_CO.po
@@ -3,11 +3,11 @@ msgid ""
 msgstr "Content-Type: text/plain; charset=utf-8\n"
 
 #, fuzzy
-msgctxt "error:calendar.event:0"
+msgctxt "error:calendar.event:"
 msgid "Busy"
 msgstr "Ocupado"
 
 #, fuzzy
-msgctxt "error:calendar.event:0"
+msgctxt "error:calendar.event:"
 msgid "Free"
 msgstr "Libre"
