--- a/locale/ru_RU.po
+++ b/locale/ru_RU.po
@@ -2,10 +2,10 @@
 msgid ""
 msgstr "Content-Type: text/plain; charset=utf-8\n"
 
-msgctxt "error:calendar.event:0"
+msgctxt "error:calendar.event:"
 msgid "Busy"
 msgstr "Занят"
 
-msgctxt "error:calendar.event:0"
+msgctxt "error:calendar.event:"
 msgid "Free"
 msgstr "Свободно"
